# bandoo-web-forge

./: .gitignore  AGENTS.md  Bandoo_WebForge.md  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: BETA_ACCEPTANCE.md
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json  remote-webapp.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: app_settings.toml  bridge_request.toml  delete_prompt_template.toml  delete_theme_preset.toml  delete_user_script.toml  delete_webapp.toml  desktop_integration_statuses.toml  execute_automation.toml  execute_user_script.toml  install_desktop_entry.toml  launch_webapp.toml  list_prompt_templates.toml  list_run_logs.toml  list_theme_presets.toml  list_user_scripts.toml  list_webapps.toml  remove_desktop_entry.toml  save_app_settings.toml  start_action_recording.toml  start_selector_capture.toml  upsert_automation.toml  upsert_prompt_template.toml  upsert_theme_preset.toml  upsert_user_script.toml  upsert_webapp.toml
src-tauri/src/: automation.rs  bridge.rs  lib.rs  main.rs  models.rs  platform.rs  runtime.rs  storage.rs
src/pages/: AiPage.vue  AutomationPage.vue  DashboardPage.vue  ScriptsPage.vue  SettingsPage.vue  WebAppShellPage.vue
src/stores/: automations.ts  prompts.ts  runtime.ts  scripts.ts  themes.test.ts  themes.ts  webapps.ts
src/styles/: main.scss
src/types/: automation.ts  bandoo.d.ts  prompts.ts  scripts.ts  webapp.ts
