[package]
name = "bandoo-web-forge"
version = "0.1.0"
description = "Enhanced WebApp/PWA desktop runtime"
authors = ["bandoo-2001"]
edition = "2021"
license = "MIT"

[lib]
name = "bandoo_web_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
url = "2"
